# SlopAY

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md
lib/: slopay-chip.c  slopay-chip.h  slopay-render.h  slopay-target-macos.c  slopay-target-macos.h  slopay_chip.c  slopay_chip.h  slopay_target_macos.c  slopay_target_macos.h
midi-ay/: arpeggiator.h  echo.h  midiay.c  polyblep.c  polyblep.h  reverb.c  reverb.h
midi-ay/effects/: echo.c  reverb.c  reverb.h
midi-ay/notes/: arpeggiator.c  chords.c  chords.h
midi-ay/oscillators/: polyblep.h
slop-ay/: slopay-loader.c  slopay-loader.h  slopay-target-midi.c  slopay-target-midi.h  slopay-target-wave.c  slopay-target-wave.h  slopay-z80.c  slopay-z80.h  slopay.c  slopay_loader.c  slopay_loader.h  slopay_target_wave.c  slopay_target_wave.h  slopay_z80.c  slopay_z80.h  slopz80.c  slopz80.h
tests/: slopay-chip-test.c  slopay-loader-test.c
